Create first dataset for NN

--- a/opf/notebooks/thermal_model_data.ipynb
+++ b/opf/notebooks/thermal_model_data.ipynb
@@ -98,16 +98,16 @@
    "source": [
     "# Construct matrix A\n",
     "A_matrix = np.array([\n",
-    "    [-1 / (Ci * Ra) - 1 / (Ci * Ri) - 1 / (Ci * Rim), 1 / (Ci * Ri), 1 / (Ci * Rim)],\n",
-    "    [1 / (Cim * Ri), -1 / (Cim * Ri), 0],\n",
-    "    [1 / (Com * Rim), 0, -1 / (Com * Rim) - 1 / (Com * Ram)]\n",
+    "    [-1/(Ci * Ra) -1/(Ci * Ri) -1/(Ci * Rim), 1/(Ci * Ri), 1/(Ci * Rim)],\n",
+    "    [1/(Cim * Ri), -1/(Cim * Ri), 0],\n",
+    "    [1/(Com * Rim), 0, -1/(Com * Rim) - 1/(Com * Ram)]\n",
     "])\n",
     "\n",
     "# Construct matrix B\n",
     "B_matrix = np.array([\n",
-    "    [1 / (Ci * Ra), A * (1 - p) / Ci, 1 / Ci],\n",
-    "    [0, A * p / Cim, 0],\n",
-    "    [1 / (Com * Ram), 0, 0]\n",
+    "    [1/(Ci * Ra), A*(1 - p)/Ci, 1/Ci],\n",
+    "    [0, A*p/Cim, 0],\n",
+    "    [1/(Com*Ram), 0, 0]\n",
     "])"
    ]
   },
@@ -125,27 +125,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.getcwd()"
+    "import numpy as np\n",
+    "from scipy.linalg import expm\n",
+    "\n",
+    "def c2dzoh(A, B, Ts):\n",
+    "    nx, nu = B.shape\n",
+    "    M = np.vstack((np.hstack((A, B)), np.zeros((nu, nx + nu)))) * Ts\n",
+    "    Phi = expm(M)\n",
+    "    Abar = Phi[:nx, :nx]\n",
+    "    Bbar = Phi[:nx, nx:nx+nu]\n",
+    "    return Abar, Bbar"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'c:\\\\Users\\\\Dell\\\\Documents\\\\GitHub\\\\PINNS_OPF\\\\opf\\\\notebooks'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getcwdb()"
+    "Ac,Bc = c2dzoh(A_matrix,B_matrix,10)"
    ]
   },
   {
@@ -156,10 +154,54 @@
     {
      "data": {
       "text/plain": [
-       "odict_keys(['AllDat'])"
+       "array([[4.37330098e-01, 3.04288766e-04, 3.66367916e-01],\n",
+       "       [4.46803757e-01, 3.10884493e-04, 3.62454328e-01],\n",
+       "       [1.01565609e-02, 6.84308029e-06, 6.59143094e-01]])"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.95997697e-01, 1.66178954e+01, 8.36434986e-01],\n",
+       "       [1.90431031e-01, 9.63215297e+02, 8.22179665e-01],\n",
+       "       [3.30693502e-01, 1.50350574e-01, 7.75926332e-03]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys(['AllDat'])"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +223,7 @@
        "Index(['date', 't', 'yTi1', 'yTi2', 'yTi3', 'yTi4', 'Ta', 'Gv', 'Ph1', 'Ph2'], dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,60 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.06367266,  0.        ,  0.        ],\n",
-       "       [ 0.        , 10.67601888,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.38945771]])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Sigma = np.diag([np.exp(-2.754),np.exp(2.368),np.exp(-0.943)])\n",
-    "Sigma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.12229158, -1.59722931,  0.04727038])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.multivariate_normal(mean=[0,0,0],cov=Sigma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modify the differential equation function to include U\n",
-    "def differential_equation(T, t, A, B, U):\n",
+    "def differential_equation(T, t, A, B, U):    \n",
     "    U = U[:,int(t)]\n",
-    "    dTdt = np.dot(A, T) + np.dot(B, U) \n",
+    "    dTdt = np.dot(A, T) + np.dot(B, U)\n",
     "    return dTdt\n",
     "\n",
-    "initial_Ti = 15\n",
+    "initial_Ti = 20\n",
     "initial_Tim = 17\n",
     "initial_Tom = 12\n",
     "\n",
@@ -263,7 +262,7 @@
     "T_initial = np.array([initial_Ti, initial_Tim, initial_Tom])\n",
     "\n",
     "# Define the time points\n",
-    "t = t = np.linspace(1,100,1200)\n",
+    "t = np.linspace(1,100,100)\n",
     "\n",
     "# Solve the differential equation\n",
     "solution = odeint(differential_equation, T_initial, t, args=(A_matrix, B_matrix, U))\n",
@@ -276,23 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([15.        , 15.08713937, 15.18316765, ..., 15.91050706,\n",
-       "       15.97850391, 16.04621649])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Ti_solution"
+    "# Modify the differential equation function to include U\n",
+    "def algebraic_equation(T, t, A, B, U):\n",
+    "    for i in range(len(t)):\n",
+    "        if i!=0:\n",
+    "            T[:,i] = np.dot(A, T[:,i-1]) + np.dot(B, U[:,i-1])\n",
+    "    return T\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_array = np.zeros(shape=(3,len(t)))\n",
+    "T_array[:,0] = np.array([initial_Ti, initial_Tim, initial_Tom])\n",
+    "T_array = algebraic_equation(T_array, t, Ac, Bc, U)"
    ]
   },
   {
