Create pinns trains

--- a/notebooks/GNN_PINNS.ipynb
+++ b/notebooks/GNN_PINNS.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch_geometric_temporal'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfunctional\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mF\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mimport\u001b[39;00m GCNConv\n\u001b[1;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric_temporal\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrecurrent\u001b[39;00m \u001b[39mimport\u001b[39;00m A3TGCN2\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric_temporal\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msignal\u001b[39;00m \u001b[39mimport\u001b[39;00m temporal_signal_split\n\u001b[0;32m      9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch_geometric_temporal'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
@@ -37,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = pd.read_csv(r'C:\\Users\\Dell\\Documents\\GitHub\\pinns_opf\\data\\interim\\lines_5.csv')\n",
-    "nodes = pd.read_csv(r'C:\\Users\\Dell\\Documents\\GitHub\\pinns_opf\\data\\interim\\nodes_5.csv')"
+    "lines = pd.read_csv(r'C:\\Users\\edi\\GitHub\\pinns_opf\\data\\interim\\lines_5.csv')\n",
+    "nodes = pd.read_csv(r'C:\\Users\\edi\\GitHub\\pinns_opf\\data\\interim\\nodes_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +309,7 @@
        "array([1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,138 +381,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inequality_loss(v_pred, v_lower, v_upper):\n",
+    "    \"\"\"\n",
+    "    Computes the loss for inequality constraints v_lower <= v_pred <= v_upper.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    v_pred -- predicted vector of size 5x1\n",
+    "    v_lower -- lower bound vector of size 5x1\n",
+    "    v_upper -- upper bound vector of size 5x1\n",
+    "    \n",
+    "    Returns:\n",
+    "    loss -- the computed loss\n",
+    "    \"\"\"\n",
+    "    # Compute violation of lower bound\n",
+    "    violation_lower = torch.relu(v_lower - v_pred)\n",
+    "    \n",
+    "    # Compute violation of upper bound\n",
+    "    violation_upper = torch.relu(v_pred - v_upper)\n",
+    "    \n",
+    "    # Compute the total violation\n",
+    "    total_violation = torch.sum(violation_lower) + torch.sum(violation_upper)\n",
+    "    \n",
+    "    # Compute the hinge loss\n",
+    "    hinge_loss = F.relu(total_violation)\n",
+    "    \n",
+    "    return hinge_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/200 [00:00<?, ?it/s]"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.0314, grad_fn=<DivBackward0>)\n"
+      "tensor(0.9946, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/200 [05:41<18:52:02, 341.32s/it]"
+      " 10%|█         | 1/10 [03:59<35:52, 239.17s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.9613, grad_fn=<DivBackward0>)\n"
+      "tensor(0.9176, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 2/200 [10:08<16:22:18, 297.67s/it]"
+      " 20%|██        | 2/10 [06:00<22:37, 169.63s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.9047, grad_fn=<DivBackward0>)\n"
+      "tensor(0.8440, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 3/200 [14:17<15:03:56, 275.31s/it]"
+      " 30%|███       | 3/10 [08:11<17:45, 152.28s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.8652, grad_fn=<DivBackward0>)\n"
+      "tensor(0.7694, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 4/200 [18:29<14:29:11, 266.08s/it]"
+      " 40%|████      | 4/10 [10:07<13:47, 137.93s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.8143, grad_fn=<DivBackward0>)\n"
+      "tensor(0.6947, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▎         | 5/200 [22:27<13:52:08, 256.05s/it]"
+      " 50%|█████     | 5/10 [12:06<10:55, 131.00s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.7572, grad_fn=<DivBackward0>)\n"
+      "tensor(0.6199, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 6/200 [26:24<13:27:22, 249.70s/it]"
+      " 60%|██████    | 6/10 [14:01<08:21, 125.48s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6987, grad_fn=<DivBackward0>)\n"
+      "tensor(0.6633, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▎         | 7/200 [30:28<13:17:17, 247.86s/it]"
+      " 70%|███████   | 7/10 [16:33<06:42, 134.16s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6437, grad_fn=<DivBackward0>)\n"
+      "tensor(0.5297, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 8/200 [34:28<13:04:29, 245.15s/it]"
+      " 80%|████████  | 8/10 [19:32<04:57, 148.63s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.5918, grad_fn=<DivBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 9/10 [21:22<02:16, 136.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.4733, grad_fn=<DivBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [24:57<00:00, 149.76s/it]\n"
      ]
     }
    ],
    "source": [
-    "model.train()\n",
+    "model = RecurrentGCN(node_features=9)\n",
     "\n",
-    "for epoch in tqdm(range(200)):\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "\n",
+    "model.train()\n",
+    "n = 5  # number of nodes\n",
+    "v_lower = torch.zeros((n, 1))\n",
+    "v_upper = torch.ones((n, 1))\n",
+    "\n",
+    "_lambda = 0.7\n",
+    "\n",
+    "for epoch in tqdm(range(10)):\n",
     "    cost = 0\n",
     "    h, c = None, None\n",
     "    for time, snapshot in enumerate(train_dataset):\n",
     "        y_hat, h, c = model(snapshot.x, snapshot.edge_index, snapshot.edge_attr, h, c)\n",
-    "        cost = cost + torch.mean((y_hat-snapshot.y)**2)     \n",
+    "        v_pred = y_hat[:,-1]\n",
+    "        cost = cost + torch.mean((y_hat-snapshot.y)**2) + _lambda*inequality_loss(v_pred, v_lower, v_upper)   \n",
     "    cost = cost / (time+1)\n",
     "    print(cost)\n",
     "    cost.backward()\n",
@@ -549,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
